UI: fix desktop top menu alignment issue.

--- a/common/common.scss
+++ b/common/common.scss
@@ -20,7 +20,7 @@
   }
 
   .nav-pills {
-    margin-bottom: 0;
+    margin: 0;
     > li > a {
       color: var(--secondary);
       line-height: 22px;
